Argocd_install_ingress/aogocd_ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/force-ssl-redirect":"true"},"name":"argocd-server-ingress","namespace":"argocd"},"spec":{"rules":[{"host":"argocd.10.96.113.158.nip.io","http":{"paths":[{"backend":{"service":{"name":"argocd-server","port":{"name":"https"}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["argocd.10. [...]
      # kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    creationTimestamp: "2025-06-07T03:13:38Z"

    

    generation: 1
    name: argocd-server-ingress
    namespace: argocd
    resourceVersion: "1606"
    uid: a010249d-3647-4da2-93c0-4c74785f10a0
  spec:
    ingressClassName: nginx
    rules:
    - host: argocd.10.96.113.158.nip.io
      http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                name: https
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - argocd.10.96.113.158.nip.io
      secretName: argocd-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.113.158
kind: List
metadata:
  resourceVersion: ""
